tempfile/derivative/tests/compile-fail/unknown-derive.stderr
error: deriving `DoesNotExist1` is not supported by derivative
 --> $DIR/unknown-derive.rs:8:14
  |
8 | #[derivative(DoesNotExist1)]
  |              ^^^^^^^^^^^^^

error: deriving `DoesNotExist2` is not supported by derivative
  --> $DIR/unknown-derive.rs:12:14
   |
12 | #[derivative(DoesNotExist2(with_some="argument"))]
   |              ^^^^^^^^^^^^^

error: deriving `DoesNotExist3` is not supported by derivative
  --> $DIR/unknown-derive.rs:18:18
   |
18 |     #[derivative(DoesNotExist3)]
   |                  ^^^^^^^^^^^^^
